Altough some minor issues remain, this should fix the general problem behind issue #99. Anchors are now working again in a more or less reliable fashion. This must be tested and adapted for the beta release

--- a/Sammelbox-Desktop/res/stylesheets/style.css
+++ b/Sammelbox-Desktop/res/stylesheets/style.css
@@ -44,11 +44,11 @@ body {
 }
 
 #albumItems {
-   style="padding:15px;
-   width:100%;"
+   width:100%;
 }
 
 .albumItem {
+   margin-top:10px;
    width:100%;
    float:left;
 }
@@ -56,7 +56,8 @@ body {
 .albumItemPictures {
    width:200px;
    float:left;
-   padding:15px;
+   margin-left:15px;
+   margin-right:15px;
 }
 
 .mainPictureWrapper {
@@ -65,8 +66,8 @@ body {
 }
 
 .mainPicture {
-   max-width:195px;
-   max-height:195px;
+   max-width:200px;
+   max-height:200px;
 }
 
 .thumbnailWrapper {
@@ -77,15 +78,19 @@ body {
 .thumbnailPicture {
    max-width:40px;
    max-height:40px;
+   margin-top:5px;
+   margin-right:5px;
 }
 
 .details {
-   padding:15px;
+   margin-right:15px;
+   padding:10px;
+   padding-left:15px;
    overflow:hidden;
    background-color:#f2f1f0; /** Create another css file where this is retrieved dynamically */
 }
 
 .buttonWrapper {
-   padding:10px;
+   padding:5px;
 }
 
